@@ -1,6 +1,7 @@
 v1.4.6 (WIP)
 - Add Box.ShowFocus
 - Add List.GetOffset, List.SetOffset and List.SetSelectedTextAttributes
+- Add TextView.SetMaxLines
 - Add Vim-style keybindings to List
 - Fix List not updating selected item before calling selected handlers
 - Do not handle right click on List when there is no context menu
